<resources>
    <string name="app_name">ClonSpotify</string>
    <string name="texto_escucha">Escucha tu música favorita</string>
    <string name="texto_boton_registrate">Registrate Gratis</string>
    <string name="texto_boton_facebook">Inicia sesión con Facebook</string>
    <string name="texto_pregunta_cuenta">¿Ya tienes una cuenta?</string>
    <string name="texto_boton_inicia_sesion">Iniciar Sesión</string>
    <string name="texto_boton_aceptar">Aceptar</string>
    <string name="edt_usuario">correo@correo.com</string>
    <string name="text_boton_stop">Stop</string>
    <string-array name="array_canciones">
        <item>http://mexiti.com/musica/jazzyfrenchy.mp3</item>
        <item>http://mexiti.com/musica/anewbeginning.mp3</item>
        <item>http://mexiti.com/musica/summer.mp3</item>
        <item>http://mexiti.com/musica/ukulele.mp3</item>
    </string-array>
</resources>
